docs:Complete textbook\2.4mutable data.ipynb and add some notes of 2.4.9propagating constraints

--- a/CS61A/textbook/2.4mutable data.ipynb
+++ b/CS61A/textbook/2.4mutable data.ipynb
@@ -1434,13 +1434,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9d541ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#=========2.4.9约束传递====================================\n",
-    "# Struggling..."
+    "# Struggling...\n",
+    "\n",
+    "\n",
+    "# 实现约束系统:希望实现的内容\n",
+    "# 实现响应以下消息的连接器connector:调度字典\n",
+    "''' \n",
+    " connector['set_val'](source, value)  \"\"\"表示 source 在请求连接器将当前值设为 value\"\"\"\n",
+    " connector['has_val']()  \"\"\"返回连接器是否已经具有值\"\"\"\n",
+    " connector['val']  \"\"\"是连接器的当前值\"\"\"\n",
+    " connector['forget'](source)  \"\"\"告诉连接器 source 请求遗忘它的值\"\"\"\n",
+    " connector['connect'](source)  \"\"\"告诉连接器参与新的约束，即 source\"\"\"\n",
+    "'''\n",
+    "# 实现约束器:调度字典\n",
+    "'''\n",
+    " constraint['new_val']()  \"\"\"表示与约束相连的某个连接器具有新的值。\"\"\"\n",
+    " constraint['forget']()  \"\"\"表示与约束相连的某个连接器遗忘了值。\"\"\"\n",
+    "'''\n",
+    "\n",
+    "# 实现细节\n",
+    "def inform_all_except(source,message,constraints):\n",
+    "    '''告知message给除了source外的所有约束器'''\n",
+    "    for c in constraints:\n",
+    "        if c!=source:\n",
+    "            c[message]()\n",
+    "            \n",
+    "def connector(name=None):\n",
+    "    '''构造连接器'''\n",
+    "    informant = None  # informant在英语中是'提供消息的人'的意思\n",
+    "    constraints = []\n",
+    "\n",
+    "    def get_constraints():\n",
+    "        return constraints\n",
+    "    \n",
+    "    def set_value(source,value):\n",
+    "        nonlocal informant\n",
+    "        val = connector['val']\n",
+    "        if val is None:\n",
+    "            informant,connector['val'] = source,value\n",
+    "            if name is not None:\n",
+    "                print(name,'=',value)\n",
+    "            inform_all_except(source,'new_val',constraints) #\n",
+    "        else:\n",
+    "            if val != value:\n",
+    "                print('发现矛盾:',val,'vs',value)\n",
+    "    def forget_value(source):\n",
+    "        nonlocal informant\n",
+    "        if informant == source:\n",
+    "            informant,connector['val'] = None,None\n",
+    "            if name is not None:\n",
+    "                print(name,'is forgotten')\n",
+    "            inform_all_except(source,'forget',constraints)\n",
+    "    connector = {'val':None,\n",
+    "                 'set_val':set_value,\n",
+    "                 'forget':forget_value,\n",
+    "                 'has_val':lambda:connector['val'] is not None,\n",
+    "                 'connect':lambda source:constraints.append(source),\n",
+    "                 'get_constraints':get_constraints}\n",
+    "    return connector\n",
+    "\n",
+    "\n",
+    "# 定义约束:加法器,乘法器,常量.return的都是constraint,调度字典\n",
+    "# 共同部分\n",
+    "def make_ternary_constraint(a,b,c,ab,ca,cb):\n",
+    "    '''约束 ab(a,b)=c, ca(c,a)=b, cb(c,b)=a'''\n",
+    "    def new_value():\n",
+    "        av,bv,cv = [connector['has_val']() for connector in (a,b,c)] # 判断a,b,c是否存在值\n",
+    "        if av and bv:\n",
+    "            c['set_val'](constraint,ab(a['val'],b['val']))\n",
+    "        elif av and cv:\n",
+    "            b['set_val'](constraint,ca(c['val'],a['val']))\n",
+    "        elif bv and cv:\n",
+    "            a['set_val'](constraint,cb(c['val'],b['val']))\n",
+    "            \n",
+    "    def forget_value():\n",
+    "        for connector in (a,b,c):\n",
+    "            connector['forget'](constraint)\n",
+    "\n",
+    "    constraint = {'new_val':new_value,\n",
+    "                  'forget':forget_value}\n",
+    "    \n",
+    "    for connector in (a,b,c):\n",
+    "        connector['connect'](constraint)\n",
+    "    \n",
+    "    return constraint \n",
+    "# 加法器\n",
+    "from operator import add,sub\n",
+    "def adder(a,b,c):\n",
+    "    '''约束 a+b=c'''\n",
+    "    return make_ternary_constraint(a,b,c,add,sub,sub)\n",
+    "\n",
+    "# 乘法器\n",
+    "from operator import mul,truediv\n",
+    "def multiplier(a,b,c):\n",
+    "    '''约束 a*b=c'''\n",
+    "    return make_ternary_constraint(a,b,c,mul,truediv,truediv)\n",
+    "\n",
+    "# 常量\n",
+    "def constant(connector,value):\n",
+    "    '''将连接器的值设置为常量,相当于直接给一个连接器set_val'''\n",
+    "    constraint = {}\n",
+    "    connector['set_val'](constraint,value)\n",
+    "    return constraint\n",
+    "\n",
+    "\n",
+    "# 定义两个命过名的连接器，分别是摄氏度和华氏度\n",
+    "celsius = connector('Celsius')\n",
+    "fahrenheit = connector('Fahrenheit')\n",
+    "\n",
+    "# def converter(c, f):    # converter表示转换器,实现摄氏度和华氏度之间的转换.这里并没有直接转换,而是先构造c和f之间的约束,将c和f连通\n",
+    "#     '''用约束条件连通c和f,实现摄氏度和华氏度之间的转换\n",
+    "#     9 * c = 5 * (f - 32)'''\n",
+    "#     u, v, w, x, y =[connector() for _ in range(5)]\n",
+    "#     multiplier(c,w,u)\n",
+    "#     multiplier(v,x,u)\n",
+    "#     adder(v,y,f)\n",
+    "#     constant(w,9)\n",
+    "#     constant(x,5)\n",
+    "#     constant(y,32)\n",
+    "\n",
+    "u, v, w, x, y =[connector() for _ in range(5)]\n",
+    "multiplier(celsius,w,u)\n",
+    "multiplier(v,x,u)\n",
+    "adder(v,y,fahrenheit)\n",
+    "constant(w,9)\n",
+    "constant(x,5)\n",
+    "constant(y,32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "43c91ebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Celsius = 25\n",
+      "Fahrenheit = 77.0\n",
+      "发现矛盾: 77.0 vs 212\n",
+      "Celsius is forgotten\n",
+      "Fahrenheit is forgotten\n",
+      "Fahrenheit = 212\n",
+      "Celsius = 100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 连通celsius和fahrenheit\n",
+    "#converter(celsius, fahrenheit)\n",
+    "\n",
+    "# 为摄氏度celsius设置值,并输出两个命名的连接器('Celsius'和'Fahrenheit')的值,即华氏度和摄氏度\n",
+    "celsius['set_val']('user',25)  # set_val表示设置值.这里用到的方法是调度字典.\n",
+    "\n",
+    "# 为华氏度设置值\n",
+    "fahrenheit['set_val']('user', 212)\n",
+    "#Contradiction detected: 77.0 vs 212\n",
+    "\n",
+    "# 由于前面设置过摄氏度的值进而让华氏度位置已经占有了值,我们现在先让摄氏度遗忘值进而让华氏度也遗忘值,以便设置新的值\n",
+    "celsius['forget']('user')\n",
+    "# Celsius is forgotten\n",
+    "# Fahrenheit is forgotten\n",
+    "\n",
+    "# 为华氏度设置值,同时输出此时摄氏度和华氏度的值\n",
+    "fahrenheit['set_val']('user', 212)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c03711b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'val': 100.0, 'set_val': <function connector.<locals>.set_value at 0x0000025727E199E0>, 'forget': <function connector.<locals>.forget_value at 0x00000257293DEE80>, 'has_val': <function connector.<locals>.<lambda> at 0x00000257293DE7A0>, 'connect': <function connector.<locals>.<lambda> at 0x00000257293DEAC0>, 'get_constraints': <function connector.<locals>.get_constraints at 0x0000025727E853A0>}\n",
+      "{'val': 212, 'set_val': <function connector.<locals>.set_value at 0x00000257293DF100>, 'forget': <function connector.<locals>.forget_value at 0x00000257293DFBA0>, 'has_val': <function connector.<locals>.<lambda> at 0x00000257293DEA20>, 'connect': <function connector.<locals>.<lambda> at 0x00000257293DF2E0>, 'get_constraints': <function connector.<locals>.get_constraints at 0x00000257293DED40>}\n",
+      "[{'new_val': <function make_ternary_constraint.<locals>.new_value at 0x00000257293DC680>, 'forget': <function make_ternary_constraint.<locals>.forget_value at 0x00000257293DCE00>}]\n",
+      "[{'new_val': <function make_ternary_constraint.<locals>.new_value at 0x00000257293DC680>, 'forget': <function make_ternary_constraint.<locals>.forget_value at 0x00000257293DCE00>}, {'new_val': <function make_ternary_constraint.<locals>.new_value at 0x00000257293DE700>, 'forget': <function make_ternary_constraint.<locals>.forget_value at 0x00000257293DE660>}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(celsius)\n",
+    "print(fahrenheit)\n",
+    "print(celsius['get_constraints']())\n",
+    "print(u['get_constraints']())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997916cb",
+   "metadata": {},
+   "source": [
+    "关于最后的约束传递的一点体会:\n",
+    "应该算是大致理解整个过程了.在理解的过程中,遇到的最大的困惑是:连接器函数connector()开始时都会创建一个空的名字为constraints列表,多次调用connector()时为什么不会把constraints更新为空列表,而是能在保持其元素的同时,还能往里面append元素?\n",
+    "\n",
+    "通过在函数connector()中定义内部函数get_constraints()来获取constrainsts列表才明白:首先这个constraints列表里的元素是约束器返回的constraint调度字典;可以看到在每个函数后面都有\"at\"+\"地址\"(比如new_value at 0x00000257293DC680),这个地址是函数对象在内存中的地址（十六进制表示）,不同函数的地址不同,甚至同名函数的地址也有不同的;这也让我更进一步明白了'函数是对象'这句话.同理,connector()返回的connector调度字典也是这样的.\n",
+    "\n",
+    "既然函数是对象,当函数定义在另一个函数内部时(如set_value()在connector()内部),每次调用外部函数时，都会创建新的内部函数实例对象.\n",
+    "\n",
+    "​这些内部函数会\"捕获\"外部函数的局部变量(闭包的特性),不同的内部函数是不同的对象,所捕获的局部变量也是不同的对象.\n",
+    "\n",
+    "这也就是为什么每个连接器connector都有各自的constraints列表.因为在每次调用connector()(创建新的连接器)的时候,每个connector()内部都创建了新的constraints列表和内部函数,而不是覆盖唯一的constraints列表,并且内部函数和这些局部变量具有绑定关系,connector()返回的connector调度字典中具有value为内部函数(注意是内部函数,与别的connector()定义的同名函数是不同对象)的键值对,当使用这些内部函数的时候,这些内部函数所操作的都是各自所捕获的constraints列表.\n",
+    "\n",
+    "\n",
+    "其他参考内容如下:\n",
+    "\n",
+    "函数在Python中的本质\n",
+    "​函数也是对象​：\n",
+    "在Python中，函数是\"一等公民\"，意味着它们和其他数据类型(如整数、字符串)具有同等的地位，可以被赋给变量、作为参数传递给其他函数、作为函数的返回值,甚至存储在数据结构中\n",
+    "每次定义函数时，都会创建一个新的函数对象\n",
+    "at 0x...后面的十六进制数字是函数对象在内存中的地址\n",
+    "\n",
+    "​闭包函数的特殊性​：\n",
+    "当函数定义在另一个函数内部时\n",
+    "每次调用外部函数时，都会创建新的内部函数实例​\n",
+    "这些内部函数会\"捕获\"外部函数的局部变量（闭包特性）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835a0b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "21\n",
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 其他理解闭包的简单例子\n",
+    "def outer(x):\n",
+    "    y = x * 2\n",
+    "    def inner():\n",
+    "        return y + 1\n",
+    "    return inner\n",
+    "\n",
+    "f1 = outer(5)  # 创建闭包1：捕获y=10\n",
+    "f2 = outer(10) # 创建闭包2：捕获y=20\n",
+    "\n",
+    "print(f1()) # 11\n",
+    "print(f2()) # 21\n",
+    "\n",
+    "# 查看闭包内容\n",
+    "print(f1.__closure__[0].cell_contents) # 10\n",
+    "print(f2.__closure__[0].cell_contents) # 20"
    ]
   }
  ],
