--- a/CS61A/textbook/2.5object-oriented programming to 2.5.3.ipynb
+++ b/CS61A/textbook/2.5object-oriented programming to 2.5.3.ipynb
@@ -410,7 +410,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#===2.5.4类属性================\n"
+    "#===2.5.4类属性================\n",
+    "# 2.5object-oriented programming to 2.5.8.ipynb"
    ]
   }
  ],
