docs:Complete textbook\2.7object abstraction.ipynb

--- a/CS61A/textbook/2.7object abstraction.ipynb
+++ b/CS61A/textbook/2.7object abstraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "54b2ecd0",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "a2db0987",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "d93bd0b8",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "244ac162",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "98e92867",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f81bc085",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "79495106",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "<bound method <lambda> of <__main__.Account object at 0x00000220F69E9C40>>\n"
+      "<bound method <lambda> of <__main__.Account object at 0x00000291813C8290>>\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "0bd01412",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "12"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "6902912a",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "4b2bc10e",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "7bb7d69e",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "7"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,8 +263,7 @@
     "        return self.add(other)\n",
     "    def __mul__(self,other):\n",
     "        return self.mul(other)\n",
-    "\n",
-    "\n",
+    "    \n",
     "class Complex(Number):\n",
     "    def add(self,other):\n",
     "        return ComplexRI(self.real+other.real,self.imag+other.imag)\n",
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "5a1ac6b5",
    "metadata": {},
    "outputs": [],
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "79362c74",
    "metadata": {},
    "outputs": [
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "67ef5734",
    "metadata": {},
    "outputs": [
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "de638237",
    "metadata": {},
    "outputs": [
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "cf702d52",
    "metadata": {},
    "outputs": [
@@ -394,7 +393,7 @@
        "-2.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "e01c598c",
    "metadata": {},
    "outputs": [
@@ -416,7 +415,7 @@
        "ComplexRI(1,4)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "id": "648c3328",
    "metadata": {},
    "outputs": [
@@ -445,7 +444,7 @@
        "ComplexMA(0,1.5*pi)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,12 +465,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "3e417606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rational(4,3)\n",
+      "Rational(1,3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#========2.7.4泛型函数===============\n",
+    "\n",
+    "# 定义有理数类\n",
+    "from math import gcd\n",
+    "class Rational(Number):\n",
+    "    def __init__(self,numer,denom):\n",
+    "        g = gcd(numer,denom)\n",
+    "        self.numer = numer // g\n",
+    "        self.denom = denom // g\n",
+    "    def __repr__(self):\n",
+    "        return 'Rational({0},{1})'.format(self.numer,self.denom)\n",
+    "    # def __str__(self):     # print的时候,如果没有定义__str__方法,则调用__repr__方法\n",
+    "    #     # 友好的显示   \n",
+    "    #     return '{}/{}'.format(self.numer, self.denom)\n",
+    "    def add(self,other):\n",
+    "        nx,dx = self.numer,self.denom\n",
+    "        ny,dy = other.numer,other.denom\n",
+    "        return Rational(nx*dy+ny*dx,dx*dy)\n",
+    "    def mul(self,other):\n",
+    "        numer = self.numer*other.numer\n",
+    "        denom = self.denom*other.denom\n",
+    "        return Rational(numer,denom)\n",
+    "    \n",
+    "print(Rational(1,2)+Rational(2,3)+Rational(1,6))\n",
+    "print(Rational(1,2)*Rational(2,3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23635218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 类型派发:为实例对象加以归属,对归于同一类型的对象进行特定的操作,如果不属于同一类,则定义新的函数,输入不同类的对象,输出想要的结果\n",
+    "\n",
+    "# 判断某对象是否属于某类或继承于某类\n",
+    "# 内置函数isinstance(对象,类)\n",
+    "c = ComplexRI(1,1)\n",
+    "print(isinstance(c,ComplexRI))\n",
+    "print(isinstance(c,ComplexMA))\n",
+    "print(isinstance(c,Complex))\n",
+    "print(isinstance(c,Number))\n",
+    "\n",
+    "# 为实例对象提供类型标签type_tag:有理数:'rat',复数:'com'\n",
+    "Rational.type_tag = 'rat'\n",
+    "Complex.type_tag = 'com'\n",
+    "\n",
+    "# 结合复数和有理数\n",
+    "def add_complex_and_rational(c,r):\n",
+    "    return ComplexRI(c.real+r.numer/r.denom,c.imag)\n",
+    "\n",
+    "def mul_complex_and_rational(c,r):\n",
+    "    r_magnitude,r_angle = r.numer/r.denom,0\n",
+    "    if r_magnitude < 0:\n",
+    "        r_magnitude,r_angle = -r.numer/r.denom,pi\n",
+    "    return ComplexMA(c.magnitude * r_magnitude,c.angle+r_angle)\n",
+    "\n",
+    "def add_rational_and_complex(r,c):\n",
+    "    return add_complex_and_rational(c,r)\n",
+    "def mul_rational_and_complex(r,c):\n",
+    "    return mul_complex_and_rational(c,r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1154b693",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#========2.7.4泛型函数==============="
+    "# 重写Number类\n",
+    "class Number:\n",
+    "    def __add__(self,other):\n",
+    "        if self.type_tag == other.type_tag:\n",
+    "            return self.add(other)\n",
+    "        elif (self.type_tag,other.type_tag) in self.adders:\n",
+    "            return self.adders[(self.type_tag,other.type_tag)](self,other)\n",
+    "        \n",
+    "    def __mul__(self,other):\n",
+    "        if self.type_tag == other.type_tag:\n",
+    "            return self.mul(other)\n",
+    "        elif (self.type_tag,other.type_tag) in self.multipliers:\n",
+    "            return self.multipliers[(self.type_tag,other.type_tag)](self,other)\n",
+    "\n",
+    "    # def cross_apply()\n",
+    "    adders = {('com','rat'):add_complex_and_rational,\n",
+    "              ('rat','com'):add_rational_and_complex}\n",
+    "    \n",
+    "    multipliers = {('com','rat'):mul_complex_and_rational,\n",
+    "                   ('rat','com'):mul_rational_and_complex}\n",
+    "\n",
+    "# See in 2.7object abstraction-rewrite Number.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631ffc14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#========强制转换=================\n",
+    "# See in 2.7object abstraction-rewrite Number-2.ipynb"
    ]
   }
  ],
