--- a/CS61A/textbook/2.9recursive objects.ipynb
+++ b/CS61A/textbook/2.9recursive objects.ipynb
@@ -333,12 +333,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f4d15ee0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#==========2.9.2 Tree Class================\n"
+    "#==========2.9.2 Tree Class================\n",
+    "class Tree:\n",
+    "    def __init__(self,label,branches=()):\n",
+    "        self.label = label\n",
+    "        for branch in branches:\n",
+    "            assert isinstance(branch,Tree)\n",
+    "        self.branches = branches\n",
+    "    def __repr__(self):\n",
+    "        if self.branches:\n",
+    "            return 'Tree({0},{1})'.format(self.label,repr(self.branches))\n",
+    "        else:\n",
+    "            return 'Tree({0})'.format(repr(self.label))\n",
+    "    def is_leaf(self):\n",
+    "        return not self.branches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6130301c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tree(3,(Tree(1,(Tree(0), Tree(1))), Tree(2,(Tree(1), Tree(1,(Tree(0), Tree(1)))))))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_tree(n):\n",
+    "    '''斐波那契树'''\n",
+    "    if n == 1:\n",
+    "        return Tree(0)\n",
+    "    elif n == 2:\n",
+    "        return Tree(1)\n",
+    "    else:\n",
+    "        return Tree(fib_tree(n-2).label+fib_tree(n-1).label,(fib_tree(n-2),fib_tree(n-1)))\n",
+    "fib_tree(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dc0bfdc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_labels(t):\n",
+    "    '''对树的所有label求和'''\n",
+    "    return t.label + sum([sum_labels(b) for b in t.branches])\n",
+    "print(sum_labels(fib_tree(5)))\n",
+    "print(sum([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54592fe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tree(3,(Tree(1,(Tree(0), Tree(1))), Tree(2,(Tree(1), Tree(1,(Tree(0), Tree(1)))))))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def memo(f):   # 实现记忆化搜索\n",
+    "    cached = {}\n",
+    "    def memo_fib(n):\n",
+    "        if n not in cached:\n",
+    "            cached[n] = f(n)\n",
+    "        return cached[n]\n",
+    "    return memo_fib\n",
+    "\n",
+    "fib_tree = memo(fib_tree)\n",
+    "fib_tree(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eca7ec49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#======2.9.3集合=============================\n"
    ]
   }
  ],
