docs:Complete textbook\2.9recursive.ipynb

--- a/CS61A/textbook/2.9recursive objects.ipynb
+++ b/CS61A/textbook/2.9recursive objects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0327a40e",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "3a8950e7",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "41d83fe4",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "'Link(3,Link(4,Link(5)))'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "ab7fc92d",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "Link(3,Link(4,Link(5)))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "c43a9cc4",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "36b71423",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "7d926896",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "Link(3,Link(4,Link(5,Link(3,Link(4,Link(5))))))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "361f99fa",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "Link(3,Link(4,Link(5,Link(3,Link(4,Link(5))))))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "c3f343b9",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "Link(9,Link(16,Link(25)))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "a333b72a",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "4016a6f0",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "'3, 4, 5'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "e27ee626",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f4d15ee0",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "6130301c",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "Tree(3,(Tree(1,(Tree(0), Tree(1))), Tree(2,(Tree(1), Tree(1,(Tree(0), Tree(1)))))))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "dc0bfdc2",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "54592fe1",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "Tree(3,(Tree(1,(Tree(0), Tree(1))), Tree(2,(Tree(1), Tree(1,(Tree(0), Tree(1)))))))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,12 +438,308 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "eca7ec49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#======2.9.3集合=============================\n",
+    "s = {3, 2, 1, 4, 4}\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bd4ef6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "4\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3 in s)   # 成员测试\n",
+    "print(len(s))   # 长度\n",
+    "print(s.union({1,5}))   # 并集\n",
+    "print(s.intersection({2,3,6})) # 交集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "11158d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.isdisjoint({5,6})) # 交集是否为空\n",
+    "print(s.issubset({1,2,3,4,5,6,7}))  # 子集\n",
+    "print(s > {3,4})     # 真超集\n",
+    "print(s >= {1,2,3,4}) # 超集 issupset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b91c9258",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 实现集合\n",
+    "\n",
+    "# Link实现\n",
+    "def empty(s):\n",
+    "    return s is Link.empty\n",
+    "\n",
+    "def set_contains(s,v):\n",
+    "    '''当且仅当集合s包含元素v时返回True'''\n",
+    "    if empty(s):\n",
+    "        return False\n",
+    "    elif s.first == v:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return set_contains(s.rest,v)  # 递归地遍历\n",
+    "s = Link(4, Link(1, Link(5)))\n",
+    "print(set_contains(s,2))\n",
+    "print(set_contains(s,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6ffcd305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Link(4,Link(1,Link(5,Link(6))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def adjoin_behind_set(s,v):    # 先尝试了一下,结果实现了添加到集合最后.教材参考代码见下面的单元格\n",
+    "    '''将元素v添加到集合s后,保持集合的不重复性'''\n",
+    "    if set_contains(s,v):\n",
+    "        return s\n",
+    "    elif s.rest == Link.empty:\n",
+    "        return Link(s.first,Link(v))\n",
+    "    else:\n",
+    "        return Link(s.first,adjoin_behind_set(s.rest,v))\n",
+    "print(adjoin_behind_set(s,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "54748c15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Link(2,Link(4,Link(1,Link(5))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def adjoin_set(s,v):\n",
+    "    '''将元素v添加到集合s最前面,保持集合的不重复性'''\n",
+    "    if set_contains(s,v):\n",
+    "        return s\n",
+    "    else:\n",
+    "        return Link(v,s)\n",
+    "print(adjoin_set(s,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "26516dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(1,Link(5))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def intersect_set(set1,set2):  # 交集\n",
+    "    \"\"\"返回一个集合,包含 set1 和 set2 中的公共元素(即返回二者的交集)\"\"\"\n",
+    "    return filter_link(lambda v: set_contains(set2, v),set1) # 返回set1中在set2中的元素\n",
+    "intersect_set(s,Link(1, Link(5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "598173e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(4,Link(3,Link(1,Link(5))))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def my_union_set(set1,set2):   # 并集--先直接合并两个集合,然后过滤掉全部重复计算的元素,求出并集减去交集的部分,再加上交集\n",
+    "    '''返回一个集合,包含 set1 和 set2 中的所有元素'''\n",
+    "    return extend_link(filter_link(lambda v: not set_contains(intersect_set(set1,set2), v),extend_link(set1,set2)),intersect_set(set1,set2))\n",
+    "my_union_set(s,Link(3, Link(1, Link(5))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ae4e06d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(4,Link(3,Link(1,Link(5))))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def union_set(set1,set2):  # 先求出set1不在set2中的部分,再加上set2\n",
+    "    set1_not_set2 = filter_link(lambda v: not set_contains(set2, v),set1)\n",
+    "    return extend_link(set1_not_set2,set2)\n",
+    "union_set(s,Link(3, Link(1, Link(5))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19d6c7a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 有序集合\n",
+    "# 查找元素v是否在升序排序的集合s中,当v小于s某个元素时,s中剩下的元素可以不用判断了\n",
+    "def ordered_set_contains(s,v):\n",
+    "    if empty(s) or s.first > v:\n",
+    "        return False\n",
+    "    elif s.first == v:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return ordered_set_contains(s.rest,v)\n",
+    "\n",
+    "u = Link(1, Link(4, Link(5)))\n",
+    "print(set_contains(u, 0))\n",
+    "print(set_contains(u, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32c019f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(1,Link(5))"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ordered_intersect_set(set1,set2):\n",
+    "    if empty(set1) or empty(set2):\n",
+    "        return Link.empty\n",
+    "    else:\n",
+    "        e1,e2 = set1.first,set2.first\n",
+    "        if e1 < e2:\n",
+    "            return ordered_intersect_set(set1.rest,set2)\n",
+    "        elif e1 > e2:\n",
+    "            return ordered_intersect_set(set1,set2.rest)\n",
+    "        elif e1 == e2:\n",
+    "            return Link(e1,ordered_intersect_set(set1.rest,set2.rest))\n",
+    "\n",
+    "intersect_set(s, s.rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7eddbab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#======2.9.3集合=============================\n"
+    "# 二叉搜索树\n",
+    "# 左分支的数都比根节点小,右分支的数都比根节点大\n",
+    "# 搜索一个数的时候,先比较其值与根节点的大小\n",
+    "# 如果小于根节点,就在左分支中找,同理右分支\n",
+    "# 如果树的结构良好,一次可以减少一半的查找量,时间复杂度为O(logn)"
    ]
   }
  ],
